Fixed Mention+Emoji Overlap

--- a/Valour/Client/Components/Windows/ChannelWindows/MentionSelectComponent.razor.css
+++ b/Valour/Client/Components/Windows/ChannelWindows/MentionSelectComponent.razor.css
@@ -4,6 +4,7 @@
     border-radius: var(--radius-lg);
     padding: 6px;
     background-color: var(--main-1);
+    z-index: 1000;
     opacity: 0.95
 }
 
