--- a/Valour/Client/wwwroot/css/globals.css
+++ b/Valour/Client/wwwroot/css/globals.css
@@ -1692,6 +1692,7 @@ img.emoji {
     position: absolute;
     bottom: 50px;
     right: 0;
+    z-index: 1000;
 }
 
 /* Economy */
